--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "kayac-html5-starter",
+  "name": "atsuhan-webpack-starter",
   "version": "0.0.0",
-  "description": "kayac-html5-starter development.",
-  "author": "Kayac Inc.",
+  "description": "atsuhan-webpack-starter development.",
+  "author": "a_hancho",
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode production --progress",
@@ -27,7 +27,7 @@
     "glob": "^7.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
-    "js-yaml-loader": "^0.1.0",
+    "js-yaml-loader": "^1.2.2",
     "node-sass": "^4.8.3",
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.3",
@@ -45,7 +45,7 @@
     "stylelint-scss": "^3.5.4",
     "webpack": "^4.4.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.1",
+    "webpack-dev-server": "^3.11.0",
     "webpack-route-data-mapper": "^2.1.0"
   },
   "babel": {
