--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "glob": "^7.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
-    "js-yaml-loader": "^1.0.2",
     "node-sass": "^4.8.3",
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.3",
@@ -46,7 +45,8 @@
     "webpack": "^4.4.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.11.0",
-    "webpack-route-data-mapper": "^2.1.0"
+    "webpack-route-data-mapper": "^2.1.0",
+    "yaml-loader": "^0.6.0"
   },
   "babel": {
     "presets": [
