--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode production --progress",
-    "start": "webpack-dev-server --mode development --inline --open"
+    "start": "webpack-dev-server --mode development --inline --open --https --host 0.0.0.0 --public localhost"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
@@ -15,6 +15,8 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^0.28.11",
     "css-mqpacker": "^6.0.2",
     "eslint": "^5.16.0",
