--- a/src/pug/meta.yml
+++ b/src/pug/meta.yml
@@ -1,8 +1,8 @@
 # このサイト全体のタイトル
-site_name: kayac-html5-starter
+site_name: atsuhan-webpack-starter
 
 # meta description（og:description・twitter:descriptionでも使用）
-description: kayac-html5-starter web page.
+description: atsuhan-webpack-starter
 
 # meta keywords
 keywords: []
