--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode production --progress",
-    "start": "webpack-dev-server --mode development --inline --open --https --host 0.0.0.0 --public localhost"
+    "start": "webpack-dev-server --mode development --inline --open --https --host 0.0.0.0 --public localhost:3000"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
@@ -15,7 +15,6 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^0.28.11",
     "css-mqpacker": "^6.0.2",
@@ -44,6 +43,7 @@
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-prettier": "^1.0.6",
     "stylelint-scss": "^3.5.4",
+    "three": "^0.121.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.11.0",
